[workspace]
members = ["constants", "generator", "submission", "finalizer", "utils"]

[workspace.package]
version = "0.1.0"
edition = "2021"
rust-version = "1.58"
publish = false

[workspace.dependencies]
# Local dependencies
constants = { path = "constants" }
library = { path = "library" }
utils = { path = "utils" }

# External dependencies
actix-web = "4"
anyhow = "1"
const_format = "0.2"
fn-error-context = "0.2"
heck = "0.4"
indoc = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
