[package]
name = "polycarp"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "3.3.2"
anyhow = "1.0.34"
fn-error-context = "0.1.1"
Inflector = "0.11.4"
serde = "1.0"
serde_json = "1.0.60"
utils = { path = "../utils" }
