[package]
name = "polycarp"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
publish.workspace = true

[dependencies]
actix-web.workspace = true
anyhow.workspace = true
constants.workspace = true
fn-error-context.workspace = true
heck.workspace = true
serde.workspace = true
serde_json.workspace = true
utils.workspace = true

[dev-dependencies]
indoc.workspace = true
